// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSRadioGroup Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Base
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Radio Group Label
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label One"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label One"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label One"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label One
            </span>
          </label>
        </span>
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label Two"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label Two"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label Two"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label Two
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioGroup Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Disabled
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Radio Group Label
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            disabled={true}
            id="Radio Label One"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label One"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label One"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label One
            </span>
          </label>
        </span>
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            disabled={true}
            id="Radio Label Two"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label Two"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label Two"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label Two
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioGroup Docs site Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Radio Group Label
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label One"
            name="base-doc-site"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label One"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label One"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label One
            </span>
          </label>
        </span>
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label Two"
            name="base-doc-site"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label Two"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label Two"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label Two
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioGroup Error 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Error
    </h1>
    <fieldset
      className="slds-form-element slds-has-error"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        Radio Group Label
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-radio"
        >
          <input
            aria-describedby="error-id"
            checked={false}
            id="Radio Label One"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label One"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label One"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label One
            </span>
          </label>
        </span>
        <span
          className="slds-radio"
        >
          <input
            aria-describedby="error-id"
            checked={false}
            id="Radio Label Two"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label Two"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label Two"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label Two
            </span>
          </label>
        </span>
        <div
          className="slds-form-element__help"
          id="error-id"
        >
          There is an error
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DOM snapshots SLDSRadioGroup Required 1`] = `
<div
  className="slds-p-around_medium"
>
  <div>
    <h1
      className="slds-text-title_caps slds-p-vertical_medium"
    >
      Required
    </h1>
    <fieldset
      className="slds-form-element"
    >
      <legend
        className="slds-form-element__legend slds-form-element__label"
      >
        <abbr
          className="slds-required"
          title="required"
        >
          *
          <div
            className="slds-assistive-text"
          >
            Required
             
          </div>
        </abbr>
        Radio Group Label
      </legend>
      <div
        className="slds-form-element__control"
      >
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label One"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label One"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label One"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label One
            </span>
          </label>
        </span>
        <span
          className="slds-radio"
        >
          <input
            checked={false}
            id="Radio Label Two"
            name="radio-group-example"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            type="radio"
            value="Radio Label Two"
          />
          <label
            className="slds-radio__label"
            htmlFor="Radio Label Two"
          >
            <span
              className="slds-radio_faux"
            />
            <span
              className="slds-form-element__label"
            >
              Radio Label Two
            </span>
          </label>
        </span>
      </div>
    </fieldset>
  </div>
</div>
`;
